src/objects/ArticleCourseVersionLink__c.object
<CustomObject>
    <description>Each record in this object links a knowledge article version id to a course version id</description>
    <fields>
        <fullName>ArticleCreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_CourseVersion_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ArticleCreatedDateTime__c</fullName>
        <label>Article Created DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ArticlePublicationStatus__c</fullName>
        <label>Article Publication Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ArticleStage__c</fullName>
        <label>Article Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Publish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved for Publish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ArticleSummary__c</fullName>
        <label>Article Summary</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ArticleTitle__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleType__c</fullName>
        <label>Article Type</label>
        <picklist>
            <picklistValues>
                <fullName>Welcome Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Getting Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course At-a-Glance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CourseCode__c</fullName>
        <formula>WGUCourseVersion__r.WGUCourse__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CourseOfStudyId__c</fullName>
        <formula>WGUCourseVersion__r.CourseOfStudyId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course of Study ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CourseTitle__c</fullName>
        <formula>WGUCourseVersion__r.title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CourseVersion__c</fullName>
        <formula>WGUCourseVersion__r.Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KnowledgeArticleId__c</fullName>
        <label>KnowledgeArticleId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KnowledgeArticleVersionId__c</fullName>
        <label>KnowledgeArticleVersionId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleArchiveDate__c</fullName>
        <description>Date this article is scheduled to be archived</description>
        <label>ScheduleArchiveDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SchedulePublishDate__c</fullName>
        <description>Date this article is scheduled to be published</description>
        <label>SchedulePublishDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UrlName__c</fullName>
        <label>URL Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUCourseVersion__c</fullName>
        <label>WGU Course Version</label>
        <referenceTo>WGUCourseVersion__c</referenceTo>
        <relationshipLabel>Article CourseVersion Links</relationshipLabel>
        <relationshipName>Article_CourseVersion_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Article CourseVersion Link</label>
    <listViews>
        <fullName>All</fullName>
        <columns>View__c</columns>
        <columns>CourseCode__c</columns>
        <columns>CourseVersion__c</columns>
        <columns>ArticleTitle__c</columns>
        <columns>ArticleCreatedBy__c</columns>
        <columns>ArticleCreatedDateTime__c</columns>
        <columns>ArticlePublicationStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACV-{000000}</displayFormat>
        <label>ACV Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article CourseVersion Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>